# dbaylo

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci-cd.yml
deploy/: README.md  backup.sh  deploy.sh  restore.sh  setup-backup.sh  setup-vps.sh
docs/: dbaylo-discovery.md
migrations/: env.py
migrations/versions/: 0001_init_schema.py  0002_lab_report_status.py  0003_reminder_active.py  0004_condition_status_medication_link.py  0005_report_link.py  0006_lab_interpretation.py  0007_narrative_reports.py  0008_reminder_last_fired.py  0009_lab_result_section.py  0010_lab_report_content_hash.py  0011_lab_result_value_text_ref_text.py  0012_indicator_notes_cache.py  0013_lab_report_birth_date.py  0014_lab_report_sex.py  0015_consult_memory.py  0016_checkin_note.py  0017_condition_dismissed.py  0018_consult_memory_analyte.py  0019_medication_source_file.py  0020_medication_course.py  0021_medication_until.py  0022_medication_content_hash.py  0023_user_city.py
src/dbaylo/: __init__.py  config.py  locale.py  persona.py
tests/: conftest.py  test_access.py  test_bot_commands.py  test_bot_handlers.py  test_bot_lab_flow.py  test_companion_chat.py  test_consult_extras.py  test_dialog_guards.py  test_formatting.py  test_history_analysis_nav.py  test_llm_client.py  test_menu_flow.py  test_models.py  test_navigator_flow.py  test_prescription_flow.py  test_state_reset.py  test_storage.py  test_web.py
tests/companion/: test_checkin.py  test_cities.py  test_concerns.py  test_consult.py  test_consult_context.py  test_consult_memory.py  test_conversation.py  test_dataquery.py  test_goals.py  test_grouping.py  test_health.py  test_history.py  test_intake.py  test_medications.py  test_notewarm.py  test_otc.py  test_proactive.py  test_reminders.py  test_scheduler.py  test_symptoms.py
tests/labs/: test_agerefs.py  test_charts.py  test_extraction.py  test_humanize.py  test_intake_pipeline.py  test_labnames.py  test_no_llm_in_trends.py  test_paged_extraction.py  test_prescription.py  test_refparse.py  test_trends.py
tests/maintenance/: test_backfill_refs.py  test_backfill_sections.py  test_cleanup_phantoms.py  test_normalize_labs.py  test_reextract_flagged.py
tests/navigator/: test_coverage_ceiling.py  test_guard.py  test_pipeline.py  (+4 more)
(+100 files in other folders)
